# LHT_sampling

./: BoundedTableaux.cpp  BoundedTableaux.h  CMakeLists.txt  Coupling.cpp  Coupling.h  LozengeTiling.cpp  LozengeTiling.h  SimpleTableaux.cpp  SimpleTableaux.h  Tableaux.cpp  Tableaux.h  Tiling.cpp  Tiling.h  main.cpp
